--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -61,6 +61,12 @@
                 margin-top: -4px;
             }
         }
+        .panel-sub-heading {
+            background: #f8f8f8;
+            padding: 1em 0;
+            margin-top: -15px;
+            border-bottom:1px solid #EFEFEF;
+        }
         .alert-danger {
             margin: 0;
         }
@@ -106,6 +112,14 @@
                 padding: 10px;
                 margin: 0;
                 border-bottom: 1px solid #CCC;
+                .count {
+                    float: right;
+                    background: #CCC;
+                    font-size: 0.8em;
+                    padding: 0 0.5em;
+                    border-radius: 3px;
+                    font-weight: bold;
+                }
                 &:last-child {
                     border-bottom: none;
                 }
