--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -134,6 +134,10 @@
             padding: 0;
             max-height: 500px;
             overflow: auto;
+            @media print {
+                overflow: visible;
+                max-height: initial;
+            }
             li {
                 padding: 10px;
                 margin: 0;
