Added the ability to share stats of a survey publicly.

--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -156,4 +156,21 @@
             }
         }
     }
+    .copy-link {
+        transition: all 0.25s;
+        .fa {
+            margin-right: 0.25em;
+        }
+        .copied {
+            display: none;
+        }
+        &.success {
+            .copied {
+                display: inline;
+            }
+            .waiting {
+                display: none;
+            }
+        }
+    }
 }
